@@ -53,6 +53,7 @@ production.
 * Added EditPage::showStandardInputs:options hook to allow extensions to add
   new fields to the "editOptions" area of the edit form.
 * Upload stash DB schema altered to improve upload performance.
+* (bug 24620) Add types to LogFormatter
 
 === Bug fixes in 1.21 ===
 * (bug 40353) SpecialDoubleRedirect should support interwiki redirects.
